<resources>
    <string name="app_name">My Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Mobile Number</string>
    <string name="national">National ID</string>
    <string name="password">Password</string>
    <string name="create">Sign Up</string>
    <string name="confirmpassword">ConFirm Password</string>
    <string name="forgetpass">Forget Password</string>
    <string name="home">Home</string>
    <string name="favourit">Favourit</string>
    <string name="cart">Cart</string>
    <string name="category">Categories</string>
    <string name="discovery">Discover</string>
    <string name="bestdiamong">Best Diamond</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="myorders">My Orders</string>
    <string name="aboutus">About us</string>
    <string name="contactus">Contact us</string>
    <string name="setting">Setting </string>
    <string name="logout">Log out</string>
    <string name="productdetails">Product Details</string>
    <string name="minpassword">Password Must be at least 8 letters</string>
    <string name="matchpass">Password Not Match</string>
    <string name="emailfailed">Email Or User Name is Used</string>
    <string name="registersuccess">Successfully Registered</string>
    <string name="loginsuccess">Login Success</string>
    <string name="selectcaliber">Select Caliber</string>
    <string name="selectsize">Select Size</string>
    <string name="filter">Filtertion</string>
    <string name="addtocart">Add To Cart</string>
    <string name="addedtocartsuccess">Product has been Add To Cart</string>
    <string name="addedtocartexist">Product Already Added To Cart</string>
    <string name="addtofavourit">Add To Your Favourit</string>
    <string name="removefromfavourit">Remove From Your Favourit</string>
    <string name="cartlist">Cart List</string>
    <string name="items">Items</string>
    <string name="checkout">Checkout</string>
    <string name="totalprice">Total Price</string>
    <string name="subtotal">Subtotal</string>
    <string name="currency">EGP</string>
    <string name="nocart">No Items \n added to cart</string>
    <string name="nofavourit">No Items \n added to favourit</string>
    <string name="review">People Review this product</string>
    <string name="presstoreload">Press To Reload</string>
    <string name="women">For Women</string>
    <string name="men">For Men</string>
    <string name="filteeer">Filter</string>
    <string name="search">Search</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="cotune">Continuue</string>
    <string name="cash">Cash</string>
    <string name="debit">Visa</string>
    <string name="orders">Orders</string>
    <string name="products">Products</string>
    <string name="name">Name</string>
    <string name="message">Message</string>
    <string name="sendmsg">Send Message</string>
    <string name="sendsuccess">Message has been Send</string>
    <string name="failedmsg">Failed, There is something wrong</string>
    <string name="confirm">ConFirm</string>
    <string name="updated">Information has been updated Successfully</string>
    <string name="order">Order has been successfully Created</string>
    <string name="orderid">Orderid</string>
    <string name="offer">% OFFER</string>
    <string name="english">English</string>
    <string name="herbian">Hebrew</string>
    <string name="language">Language</string>
    <string name="reset">Reset</string>
    <string name="sendreset">Check your Email to reset Password</string>
    <string name="insertpass">Please Insert Password</string>
    <string name="insertconfirm">Please Insert ConFirm Password</string>
    <string name="insertemail">Please Insert Email</string>
    <string name="insertfullname">Please Insert FullName</string>
    <string name="insertphone">Please Insert Phone</string>

</resources>
