<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/Rela_Login"
        android:background="#FCFCFC"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarrestaurants"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#ffffff">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/logoblack"
                android:id="@+id/logo"
                />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/relaa"
        android:layout_marginTop="@dimen/_80sdp"
        >


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/ReL_Login">

        <TextView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/login"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:id="@+id/T_Login"
            android:textColor="#fff"

            android:gravity="center"
            android:background="#FF8080"

         />

        <!--<View-->
            <!--android:layout_width="@dimen/_50sdp"-->
            <!--android:layout_height="@dimen/_1sdp"-->
            <!--android:background="#FF8080"-->
            <!--android:id="@+id/View1"-->
            <!--android:layout_marginTop="@dimen/_10sdp"-->
            <!--android:layout_below="@+id/T_Login"-->
            <!--/>-->


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ReL_Register"
        android:layout_toEndOf="@+id/ReL_Login">

        <TextView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/signup"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:id="@+id/T_SignUp"
            android:background="#ffff"
            android:textColor="#FF8080"

            android:gravity="center"
            />
        <!--<View-->
            <!--android:layout_width="@dimen/_45sdp"-->
            <!--android:layout_height="@dimen/_1sdp"-->
            <!--android:background="#FF8080"-->
            <!--android:id="@+id/View2"-->
            <!--android:layout_marginTop="@dimen/_10sdp"-->
            <!--android:visibility="gone"-->
            <!--android:layout_below="@+id/T_SignUp"-->
            <!--/>-->




    </RelativeLayout>

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:visibility="gone"

        android:layout_marginEnd="@dimen/_15sdp"
        android:id="@+id/Bc_Relative_Register"
        android:layout_below="@+id/relaa">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bs_spinner_search"
            android:hint="@string/fullname"
            android:paddingStart="@dimen/_15sdp"
            android:textColorHint="#bcbcbc"
            android:id="@+id/E_Full_Name"
            android:textColor="#bcbcbc"
            android:textSize="@dimen/_13sdp" />

        <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bs_spinner_search"
        android:hint="@string/email"
        android:textColorHint="#bcbcbc"
        android:layout_below="@+id/E_Full_Name"
        android:inputType="textEmailAddress"
        android:id="@+id/E_Email_Register"
        android:paddingStart="@dimen/_15sdp"
        android:textSize="@dimen/_13sdp"
        android:textColor="#bcbcbc"

        />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bs_spinner_search"
            android:hint="@string/phone"
            android:layout_below="@+id/E_Email_Register"
            android:textColorHint="#bcbcbc"
            android:inputType="number"
            android:id="@+id/E_Phone"
            android:textSize="@dimen/_13sdp"
            android:paddingStart="@dimen/_15sdp"
            android:textColor="#bcbcbc"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bs_spinner_search"
            android:hint="@string/password"
            android:layout_below="@+id/E_Phone"
            android:textColorHint="#bcbcbc"
            android:inputType="textPassword"
            android:id="@+id/E_Password_Register"
            android:paddingStart="@dimen/_15sdp"
            android:textSize="@dimen/_13sdp"
            android:textColor="#bcbcbc"

            />





        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bs_spinner_search"
            android:hint="@string/confirmpassword"
            android:layout_below="@+id/E_Password_Register"
            android:textColorHint="#bcbcbc"
            android:inputType="textPassword"
            android:id="@+id/E_ConfirmPassword"
            android:paddingStart="@dimen/_15sdp"
            android:textSize="@dimen/_13sdp"
            android:textColor="#bcbcbc"

            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/E_ConfirmPassword"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="#FF8080"
            android:textColor="#fff"
            android:text="@string/signup"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:id="@+id/Sign_Up"
            />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:id="@+id/Bc_Relative_Login"
        android:layout_below="@+id/relaa">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bs_spinner_search"
            android:hint="@string/email"
            android:paddingStart="@dimen/_10sdp"
            android:textColorHint="#bcbcbc"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:id="@+id/E_Email_Login"
            android:textColor="#bcbcbc"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bs_spinner_search"
            android:hint="@string/password"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_below="@+id/E_Email_Login"
            android:textColorHint="#bcbcbc"
            android:inputType="textPassword"
            android:id="@+id/E_Password_Login"
            android:paddingStart="@dimen/_10sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:textColor="#bcbcbc"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/E_Password_Login"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_alignParentRight="true"
            android:text="@string/forgetpass"
            android:textColor="#FF8080"
            android:textSize="@dimen/_14sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:textStyle="bold"
            android:id="@+id/forget"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/forget"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="#FF8080"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:id="@+id/Btn_Login"
            />



    </RelativeLayout>

        </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_70sdp"
        android:src="@drawable/progross"
        android:id="@+id/progross"
        android:visibility="gone"
        android:layout_centerInParent="true"
        />


    </RelativeLayout>