<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD"
    tools:context=".Fragments.Order_Location">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarproduct"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#ffffff">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_centerInParent="true"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/logoblack" />

                    <!--<ImageView-->
                    <!--android:layout_width="@dimen/_40sdp"-->
                    <!--android:layout_height="@dimen/_20sdp"-->
                    <!--android:layout_alignParentEnd="true"-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:src="@drawable/ic_search"-->
                    <!--android:id="@+id/ic_search"-->
                    <!--/>-->
                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/view"
                android:layout_below="@+id/toolbarproduct"
                android:background="@drawable/tabs_dropshadow" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_below="@+id/toolbarproduct"
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/Rela_Login"
                android:layout_height="match_parent">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_35sdp"
                    android:layout_below="@+id/img"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:id="@+id/Bc_Relative_Login">



                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:background="@drawable/bs_spinner_search"
                        android:hint="@string/name"
                        android:paddingStart="@dimen/_10sdp"
                        android:textColorHint="#bcbcbc"
                        android:inputType="text"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:id="@+id/E_Name"
                        android:textColor="#bcbcbc"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:background="@drawable/bs_spinner_search"
                        android:hint="@string/phone"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:layout_below="@+id/E_Name"
                        android:textColorHint="#bcbcbc"
                        android:inputType="number"
                        android:id="@+id/E_Phone"
                        android:paddingStart="@dimen/_10sdp"
                        android:drawablePadding="@dimen/_10sdp"
                        android:textColor="#bcbcbc"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:background="@drawable/bs_spinner_search"
                        android:hint="@string/email"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:paddingTop="@dimen/_5sdp"
                        android:layout_below="@+id/E_Phone"
                        android:textColorHint="#bcbcbc"
                        android:inputType="textEmailAddress"
                        android:id="@+id/E_Email"
                        android:paddingStart="@dimen/_10sdp"
                        android:drawablePadding="@dimen/_10sdp"
                        android:textColor="#bcbcbc"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:background="@drawable/bs_spinner_search"
                        android:hint="@string/password"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:layout_below="@+id/E_Email"
                        android:textColorHint="#bcbcbc"
                        android:inputType="textPassword"
                        android:id="@+id/E_Password_Login"
                        android:paddingStart="@dimen/_10sdp"
                        android:drawablePadding="@dimen/_10sdp"
                        android:textColor="#bcbcbc"
                        />


                </RelativeLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_below="@+id/Bc_Relative_Login"
                    android:background="#FF8080"
                    android:text="@string/confirm"
                    android:layout_marginTop="@dimen/_80sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:textColor="#fff"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:id="@+id/Confirm"
                    />

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
    <pl.droidsonroids.gif.GifImageView
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_70sdp"
        android:src="@drawable/progross"
        android:id="@+id/progross"
        android:visibility="gone"
        android:layout_centerInParent="true"
        />

</RelativeLayout>